src/main/resources/Krakatau-master/tests/assembler/good/ldcs.j
###preprocess###
.class public LdcTest
.super java/lang/Object

.method public static print : (F)V
    .code stack 910 locals 10
###range(255,):
    ldc {}
###
        return
    .end code
.end method
.end class
