src/main/resources/Krakatau-master/tests/assembler/bad/jumptoofar.j
###preprocess###
.class public whocares
.super java/lang/Object

.method public static print : (F)V
    .code stack 10 locals 10
        goto LFOO
###range(17000,):
    iconst_0
    pop
###
LFOO:
        return
    .end code
.end method
.end class
